--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <div class="w-auto"><img class="w-20 h-10"src="https://icons.iconarchive.com/icons/custom-icon-design/pretty-office-2/256/man-icon.png"></div><div class="text-red-600">Employee Registration Form</div>
         </div>
         <form>
-            <input type="radio"><label>Mr</label><input type="radio"><label>Mrs.</label><input type="radio"><label>Ms.</label><br>
+            <table>
+                <tr><td><input type="radio"><label>Mr</label></td><td><input type="radio"><label>Mrs.</label></td><td></td><input type="radio"><label>Ms.</label><br>
+                </tr>
             <td><label class="headings">First Name</label><input type="text" class="border-black" placeholder="FirstName"><br>
             <label>Last Name</label><input type="text" placeholder="LastName"><br>
             <label>Mail Address1</label><input type="text"><br>
@@ -31,6 +33,7 @@
             <label>Additional Information</label><textarea>Optional</textarea><br>
             <input type="submit">
             <button>Reset</button>
+            </table>
         </form>
     </div>
 </body>
