--- a/index.html
+++ b/index.html
@@ -15,24 +15,32 @@
         </div>
         <form>
             <table>
-                <tr><td><input type="radio"><label>Mr</label></td><td><input type="radio"><label>Mrs.</label></td><td></td><input type="radio"><label>Ms.</label><br>
-                </tr>
-            <td><label class="headings">First Name</label><input type="text" class="border-black" placeholder="FirstName"><br>
-            <label>Last Name</label><input type="text" placeholder="LastName"><br>
-            <label>Mail Address1</label><input type="text"><br>
-            <label>Mail Address2</label><input type="text"><br>
-            <label>City</label><input type="text"><br>
-            <label>Zip</label><input type="text"><br>
-            <label>Upload Photo</label><button>Browse</button><label>No file selected</label><br>
-            <label>E-Mail</label><input type="text"><br>
-            <label>Mobile</label><input type="text"><br>
-            <input type="checkbox"><label>Gujarati</label><br>
-            <input type="checkbox"><label>Hindi</label><br>
-            <input type="checkbox"><label>English</label><br>
-            <input type="checkbox"><label>Marathi</label><br>
-            <label>Additional Information</label><textarea>Optional</textarea><br>
-            <input type="submit">
-            <button>Reset</button>
+                <tr><td></td><td><input type="radio"><label>Mr</label><input type="radio"><label>Mrs.</label><input type="radio"><label>Ms.</label></td></tr>
+            <tr><td><label class="headings">First Name</label></td><td><input type="text" class="border-black" placeholder="FirstName"></td></tr>
+            <tr><td><label>Last Name</label></td><td><input type="text" placeholder="LastName"></td>
+            <tr><td><label>Mail Address1</label></td><td><input type="text"></td></tr>
+            <tr><td><label>Mail Address2</label></td><td><input type="text"></td></tr>
+            <tr><td><label>City</label></td><td><input type="text"></td></tr>
+            <tr><td><label>State</label></td>
+
+<td><select>
+  <option value="Gujarat">Gujarat</option>
+  <option value="tamilnadu">Tamilnadu</option>
+  <option value="maharastra">Maharastra</option>
+  <option value="kerala">kerala</option>
+</select></td></tr>
+            <tr><td><label>Zip</label></td><td><input type="text"></td></tr>
+            <tr><td><label>Upload Photo</label></td><td><button>Browse</button><label>No file selected</label></td></tr>
+            <tr><td><label>E-Mail</label></td><td><input type="text"></td></tr>
+            <tr><td><label>Mobile</label></td><td><input type="text"></td></tr>
+            <tr><td><label>Languages Known</label></td>
+            <td><input type="checkbox"><label>Gujarati</label><br>
+            <tr><td></td><td><input type="checkbox"><label>Hindi</label></td></tr>
+            <tr><td></td><td><input type="checkbox"><label>English</label></td></tr>
+            <tr><td></td><td><input type="checkbox"><label>Marathi</label></td></tr>
+            <tr><td><label>Additional Information</label></td><td><textarea>Optional</textarea></td></tr>
+            <tr><td><button>Submit</button></td>
+            <td><button>Reset</button></td></tr>
             </table>
         </form>
     </div>
