option changes made

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <tr><td></td><td><input type="checkbox"><label>Hindi</label></td></tr>
             <tr><td></td><td><input type="checkbox"><label>English</label></td></tr>
             <tr><td></td><td><input type="checkbox"><label>Marathi</label></td></tr>
-            <tr><td><label>Additional Information</label></td><td><textarea>Optional</textarea></td></tr>
+            <tr><td><label>Additional Information</label></td><td><textarea class="border-solid border-2 border-black h-16">Optional</textarea></td></tr>
             <tr><td><button>Submit</button></td>
             <td><button>Reset</button></td></tr>
             </table>
